feature: v.0.1.3: fix some swag bugs
