# internal/models/auth_request.go
@@ -1,0 +1,12 @@
+package models
+
+type LoginRequest struct {
+	Username string `json:"username" validate:"required,min=3,max=32"`
+	Password string `json:"password" validate:"required,min=3,max=128"`
+}
+
+type RegisterRequest struct {
+	Username string `json:"username" validate:"required,min=3,max=32"`
+	Password string `json:"password" validate:"required,min=3,max=128"`
+	Email    string `json:"email" validate:"required,email"`
+}
